# homework_3

./: .gitignore  CMakeLists.txt  README.md
ex1/include/: IMediciones.hpp  MedicionBase.hpp  Posicion.hpp  Presion.hpp  SaveFlightData.hpp
ex1/src/: MedicionBase.cpp  Posicion.cpp  Presion.cpp  SaveFlightData.cpp  main.cpp
ex2/include/: Circulo.hpp  Elipse.hpp  ProcesadorFigura.hpp  Punto.hpp  Rectangulo.hpp
ex2/src/: Circulo.cpp  Elipse.cpp  Punto.cpp  Rectangulo.cpp  main.cpp
ex3/: build
ex3/include/: BaseVector.hpp  ClaseEtiquetadora.hpp  ClaseVector.hpp
ex3/src/: ClaseEtiquetadora.cpp  main.cpp
include/ex1/: MedicionBase.hpp  Posicion.hpp  Presion.hpp  SaveFlightData.hpp
include/ex2/: Elipse.hpp  ProcesadorFigura.hpp  Rectangulo.hpp
include/ex3/: ClaseEtiquetadora.hpp  ClaseVector.hpp  Vectores.hpp
src/ex1/: MedicionBase.cpp  Posicion.cpp  Presion.cpp  SaveFlightData.cpp  main.cpp
src/ex2/: Circulo.cpp  Elipse.cpp  Punto.cpp  Rectangulo.cpp
